--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         const gallery = document.querySelector('.gallery');
 
         // ✅ Generate local image paths dynamically
-        const artworks = Array.from({ length: 10 }, (_, i) => `images/art${i + 1}.jpg`);
+        const artworks = Array.from({ length: 10 }, (_, i) => `art${i + 1}.jpg`);
 
         artworks.forEach((src, i) => {
             const div = document.createElement('div');
@@ -592,5 +592,6 @@ rustToggleMobile.addEventListener("click", () => rustToggle.click());
 
 
 </body>
+
 
 </html>
